[Activity] code refactoring,added pagination,API versioning and removed code smells